k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-sharing-frontend
  namespace: social-network-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: photo-sharing-frontend
      version: blue
  template:
    metadata:
      labels:
        app: photo-sharing-frontend
        version: blue
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: user-service-sa
      tolerations:
        - key: "gateway"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: type
                    operator: In
                    values: ["gateway"]
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["photo-sharing-frontend"]
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: photo-sharing-frontend
          image: pyrodocker1/photo-sharing-frontend:1.0
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: photo-sharing-frontend
  namespace: social-network-gateway
spec:
  selector:
    app: photo-sharing-frontend
    version: blue
  ports:
    - port: 3000
      targetPort: 3000
