k8s/kafka-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: social-network-db
spec:
  clusterIP: None
  selector:
    app: kafka
    version: blue
  ports:
    - name: client
      port: 9092
      protocol: TCP
      targetPort: 9092
    - name: controller
      port: 9093
      protocol: TCP
      targetPort: 9093
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: social-network-db
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      version: blue
  template:
    metadata:
      labels:
        app: kafka
        version: blue
        resource-intensive: "true"
        database: "true"
    spec:
      tolerations:
        - key: "messaging"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: database
                    operator: In
                    values: ["true"]
      hostname: kafka-0
      subdomain: kafka
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kafka
          image: apache/kafka:3.9.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          command:
            - "sh"
            - "-c"
            - |
              [...]
          ports:
            - containerPort: 9092
            - containerPort: 9093
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: kafka-data
              mountPath: /shared/data
            - name: shared-config
              mountPath: /shared/config
      volumes:
        - name: kafka-data
          emptyDir: {}
        - name: shared-config
          emptyDir: {}
