k8s/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: social-network-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
      version: blue
  template:
    metadata:
      labels:
        app: localstack
        version: blue
        resource-intensive: "true"
    spec:
      tolerations:
        - key: "database"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: type
                    operator: In
                    values: ["database"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: localstack
          image: localstack/localstack:4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4566
---
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: social-network-db
spec:
  selector:
    app: localstack
    version: blue
  ports:
    - port: 4566
      targetPort: 4566
